--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 asgiref==3.7.2
 beautifulsoup4==4.12.2
 crispy-bootstrap5==0.7
-Django==4.2.8
+Django==4.2.11
 django-betterforms==2.0.0
 django-bootstrap-v5==1.0.11
 django-braces==1.15.0
 django-comments-dab==2.8.0
 django-crispy-forms==2.0
 django-model-utils==4.3.1
+django-readonly-field==1.2.0
 django-star-ratings==0.9.2
 django-taggit==5.0.1
 djangorestframework==3.14.0
 docutils==0.20.1
+mysqlclient==2.2.4
 Pillow==10.0.1
 pytz==2023.3.post1
 six==1.16.0
