--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,39 @@
+amqp==5.2.0
 asgiref==3.7.2
 beautifulsoup4==4.12.2
+billiard==4.2.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 crispy-bootstrap5==0.7
 Django==4.2.11
 django-betterforms==2.0.0
 django-bootstrap-v5==1.0.11
 django-braces==1.15.0
+django-colorfield==0.11.0
 django-comments-dab==2.8.0
 django-crispy-forms==2.0
 django-model-utils==4.3.1
 django-readonly-field==1.2.0
+django-rest-passwordreset==1.4.1
 django-star-ratings==0.9.2
 django-taggit==5.0.1
 djangorestframework==3.14.0
 docutils==0.20.1
+kombu==5.3.7
 mysqlclient==2.2.4
 Pillow==10.0.1
+prompt_toolkit==3.0.47
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.0.1
 pytz==2023.3.post1
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
 swapper==1.3.0
 tzdata==2023.3
+vine==5.1.0
+wcwidth==0.2.13
